--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -63,3 +63,9 @@
     relative flex-row h-11 focus:outline-none
     py-4
 }
+
+/* Components for templates/profil/index.html.twig and profilform.html.twig */
+
+.singleCellSecondSection {
+    @apply grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2
+}
