--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -8,8 +8,8 @@
 <div class="fixed flex flex-col h-full w-full ml-14 mb-10 md:ml-64 bg-slate-100 dark:bg-slate-800 dark:text-white overflow-auto">
 
     <!-- Title -->
-    <div class="pl-24 py-14 pt-24">
-        <h1 class="text-6xl text-blue-600 dark:text-white">Mon Profil</h1>
+    <div class="sm:pl-24 pl-10 py-14 pt-24">
+        <h1 class="md:text-6xl text-4xl leading-6 text-blue-600 dark:text-white">Mon Profil</h1>
     </div>
 
     <!-- BLOCK START-->
@@ -20,19 +20,17 @@
             <!-- Profil Card -->
             <div class="bg-white pt-5 pb-8 px-5 rounded-tl-lg rounded-bl-lg border-t-4 border-blue-600 max-w-max dark:bg-slate-900 dark:text-white">
                 <div class="image overflow-hidden my-4 max-w-xs ">
-                    <img class="h-auto w-full mx-auto"
-                        src="{{ user.picture}}"
-                        alt="">
+                    <img class="h-auto w-full mx-auto" src="{{ user.picture}}" alt="">
                 </div>
                 <h1 class="text-gray-900 dark:text-white font-bold text-xl leading-8 my-1">{{ user.fullname}} </h1>
                 <h3 class="text-gray-600 dark:text-white font-lg text-semibold leading-6">{{ user.job.name}}</h3>
                 <p class="text-sm dark:text-white text-gray-500 leading-6">Département : {{ user.departement.name}}</p>
-                <ul
-                    class="bg-gray-100 text-gray-600 hover:shadow py-2 px-3 mt-5 divide-y rounded shadow-sm dark:bg-slate-800 dark:text-white">
+                <ul class="bg-gray-100 text-gray-600 hover:shadow py-2 px-3 mt-5 divide-y rounded shadow-sm dark:bg-slate-800 dark:text-white">
                     <li class="flex items-center py-3">
                         <span>Status</span>
-                        <span class="ml-auto"><span
-                                class="bg-green-500 py-1 px-2 rounded text-white text-sm">Actif</span></span>
+                        <span class="ml-auto">
+                            <span class="bg-green-500 py-1 px-2 rounded text-white text-sm">Actif</span>
+                        </span>
                     </li>
                     <li class="flex items-center py-3">
                         <span>Employé depuis</span>
@@ -41,6 +39,7 @@
                 </ul>
             </div>
             <!-- End Profile Card -->
+
             <div class="my-4"></div>
         </div>
 
@@ -63,58 +62,58 @@
                 
                 <div class="text-gray-700 w-[36rem] sm:w-[60rem] dark:text-white">
                     <div class="grid md:grid-cols-2 text-sm">
-                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2 ">
+                        <div class="singleCellSecondSection ">
                             <div class="px-4 py-2 font-semibold">Prénom</div>
                             <div class="px-4 py-2">{{ user.firstname }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
+                        <div class="singleCellSecondSection">
                             <div class="px-4 py-2 font-semibold">Nom</div>
                             <div class="px-4 py-2">{{ user.lastname }}</div>
                         </div>                        
-                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
+                        <div class="singleCellSecondSection">
                             <div class="px-4 py-2 font-semibold">Téléphone privé</div>
                             <div class="px-4 py-2">{{ user.phonenumber }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
+                        <div class="singleCellSecondSection">
                             <div class="px-4 py-2 font-semibold">Téléphone professionnel</div>
                             <div class="px-4 py-2">{{ user.phonenumberpro }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
+                        <div class="singleCellSecondSection">
                             <div class="px-4 py-2 font-semibold">Adresse</div>
                             <div class="px-4 py-2 whitespace-normal ">{{ user.address }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
+                        <div class="singleCellSecondSection">
                             <div class="px-4 py-2 font-semibold">Code postal et ville</div>
                             <div class="px-4 py-2">{{ user.zipcode }} {{ user.city }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
+                        <div class="singleCellSecondSection">
                             <div class="px-4 py-2 font-semibold">Email privé</div>
                             <div class="px-4 py-2">
                                 <a class="text-blue-800 dark:text-blue-400" href="mailto:{{ user.email }}">{{ user.email }}</a>
                             </div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
+                        <div class="singleCellSecondSection">
                             <div class="px-4 py-2 font-semibold">Email pro</div>
                             <div class="px-4 py-2">
                                 <a class="text-blue-800 dark:text-blue-400" href="mailto:{{ user.emailpro }}">{{ user.emailpro }}</a>
                             </div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
+                        <div class="singleCellSecondSection">
                             <div class="px-4 py-2 font-semibold">Anniversaire</div>
                             <div class="px-4 py-2">{{ user.dateOfBirth|date("m/d/Y") }}</div>
                         </div>
-                        <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2">
+                        <div class="singleCellSecondSection">
                             <div class="px-4 py-2 font-semibold"></div>
                             <div class="px-4 py-2">{# RIB #}</div>
                         </div>
                     </div>
                 </div>
                 <a href="#"
-                    class="block max-w-fit text-blue-600 text-sm font-semibold rounded-lg hover:bg-blue-600 hover:text-white focus:outline-none focus:shadow-outline focus:bg-gray-100 hover:shadow-xs p-3 my-4">
+                    class="block max-w-fit text-blue-600 text-sm font-semibold rounded-lg hover:bg-blue-600 hover:text-white focus:outline-none focus:shadow-outline focus:bg-gray-100 hover:shadow-xs p-3 my-4 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white">
                     Modifier son mot de passe</a>
 
                 <a href="{{ path('profil_edit', {'id' : user.id}) }}"
-                   class="block max-w-fit text-blue-600 text-sm font-semibold rounded-lg hover:bg-blue-600 hover:text-white focus:outline-none focus:shadow-outline focus:bg-gray-100 hover:shadow-xs p-3 my-4">
+                   class="block max-w-fit text-blue-600 text-sm font-semibold rounded-lg hover:bg-blue-600 hover:text-white focus:outline-none focus:shadow-outline focus:bg-gray-100 hover:shadow-xs p-3 my-4 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white">
                     Editer mon profil</a>
             </div>
             <!-- Fin section A propos -->
